--- a/memoWeb/public/index.html
+++ b/memoWeb/public/index.html
@@ -64,7 +64,7 @@
 
       <script src="https://www.gstatic.com/firebasejs/5.4.0/firebase.js"></script>
       <script>
-          var auth, database, userInfo;
+          var auth, database, userInfo, selectedKey;
           // Initialize Firebase
           var config = {
               apiKey: "AIzaSyBykWVFpbr5EuoIUhpCiMAPakXtqENiqio",
@@ -95,20 +95,24 @@
           });
 
           function get_memo_list() {
-              var ref = 'memos/'+userInfo.uid;
-              var memoRef = database.ref(ref);
-              console.log(memoRef);
+              var memoRef = database.ref('memos/'+userInfo.uid);
               memoRef.on('child_added', onChildAdded, function(error) {
                   console.error(error);
               });
+
+              memoRef.on('child_changed', function(data) {
+                  var txt = data.val().txt;
+                  var title = txt.substr(0, txt.indexOf('\n'));
+                  $(`#${data.key} > .title`).text(title);
+                  $(`#${data.key} > .txt`).text(txt);
+              })
           }
 
           function onChildAdded(data) {
-              console.log(data.val());
               var key = data.key;
               var memoData = data.val();
               var txt = memoData.txt;
-              var title = memoData.title;
+              var title = txt.substr(0, txt.indexOf('\n'));
               var firstTxt = txt.substr(0, 1);
               var html =
                   "<li id='"+key+"' class=\"collection-item avatar\" onclick=\"fn_get_data_one(this.id);\" >" +
@@ -116,10 +120,65 @@
                   "<span class=\"title\">" + title + "</span>" +
                   "<p class='txt'>" + txt + "<br>" +
                   "</p>" +
+                      "<a href='#' onclick='fn_delete_data(\""+key+"\")' " +
+                  "       class='secondary-content'>" +
+                  "       <i class='material-icons'>grade</i></a>"+
                   "</li>";
 
               $('.collection').append(html);
           }
+
+          function fn_delete_data(key) {
+              console.log('memos/'+userInfo.uid + '/' + key);
+              if (confirm('삭제하시겠습니까?')) {
+                  var memoRef = database.ref('memos/'+userInfo.uid + '/' + key);
+                  memoRef.remove();
+                  $(`#${key}`).remove();
+              }
+              initMemo();
+          }
+
+          function saveData() {
+              var memoRef = database.ref('memos/'+userInfo.uid);
+              var txt = $('.textarea').val();
+              if (txt == '') {
+                  return ;
+              }
+
+              if (selectedKey) {
+                  memoRef = database.ref('memos/'+userInfo.uid + '/' + selectedKey);
+                  memoRef.update({
+                      txt: txt,
+                      updateDate: new Date().getTime()
+                  })
+              } else {
+                  // push
+                  memoRef.push({
+                      txt: txt,
+                      createDate: new Date().getTime()
+                  })
+              }
+          }
+
+          function fn_get_data_one(key) {
+              selectedKey = key;
+              var memoRef = database.ref('memos/'+userInfo.uid+ '/' + key)
+                  .once('value')
+                  .then(function (snapshot) {
+                      $('.textarea').val(snapshot.val().txt);
+                  });
+          }
+
+          function initMemo() {
+              $('.textarea').val('');
+              selectedKey = null;
+          }
+
+          $(function () {
+              $('.textarea').blur(function() {
+                  saveData();
+              });
+          })
       </script>
     </body>
   </html>
